// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Beastcss Webpack Plugin External stylesheets should match html snapshot 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <title>External CSS Demo</title>
  <script defer src=\\"bundle.js\\"></script><style>:root{font-size: 10px;}html{height: 100%;}body{padding-left: 11em;
  font-family: 'Times New Roman', times, serif;
  color: purple;
  background-color: #d8da3d;}*,:after,:before{box-sizing: inherit;}ul.navbar{list-style-type: none;
  padding: 0;
  margin: 0;
  position: absolute;
  top: 2em;
  left: 1em;
  width: 9em;}h1{font-family: helvetica, arial, sans-serif;}ul.navbar li{background: white;
  margin: 0.5em 0;
  padding: 0.3em;
  border-right: 1em solid black;}ul.navbar a{text-decoration: none;}a:link{color: blue;}a:visited{color: purple;}footer{margin-top: 1em;
  padding-top: 1em;
  border-top: thin dotted;}</style><link href=\\"main.css\\" rel=\\"stylesheet\\" media=\\"print\\" onload=\\"this.media='all'; this.onload=null;\\"><noscript><link rel=\\"stylesheet\\" href=\\"main.css\\"></noscript></head>
  <body>
    <ul class=\\"navbar\\">
      <li>
        <a href=\\"index.html\\">Home page</a>
      </li>
      <li>
        <a href=\\"musings.html\\">Musings</a>
      </li>
    </ul>
    <h1>My first styled page</h1>
    <p>Welcome to my styled page!</p>
    <footer>Made 5 April 2004</footer>
  </body>
</html>
"
`;

exports[`Beastcss Webpack Plugin External stylesheets should prune external stylesheet 1`] = `
":root {
  font-size: 10px;
}
html {
  height: 100%;
}
body {
  padding-left: 11em;
  font-family: 'Times New Roman', times, serif;
  color: purple;
  background-color: #d8da3d;
}
*,
:after,
:before {
  box-sizing: inherit;
}
ul.navbar {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: absolute;
  top: 2em;
  left: 1em;
  width: 9em;
}
h1 {
  font-family: helvetica, arial, sans-serif;
}
ul.navbar li {
  background: white;
  margin: 0.5em 0;
  padding: 0.3em;
  border-right: 1em solid black;
}
ul.navbar a {
  text-decoration: none;
}
a:link {
  color: blue;
}
a:visited {
  color: purple;
}
footer {
  margin-top: 1em;
  padding-top: 1em;
  border-top: thin dotted;
}
.extra-style {
  font-size: 200%;
}

"
`;

exports[`Beastcss Webpack Plugin Internal stylesheets should remove entire unused internal stylesheets 1`] = `"h1{color: green;}"`;

exports[`Beastcss Webpack Plugin Internal stylesheets should remove unused rules 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <title>Basic Demo</title>
    <style>body{padding-left: 11em;
        font-family: 'Times New Roman', times, serif;
        color: purple;
        background-color: #d8da3d;}ul.navbar{list-style-type: none;
        padding: 0;
        margin: 0;
        position: absolute;
        top: 2em;
        left: 1em;
        width: 9em;}h1{font-family: helvetica, arial, sans-serif;}ul.navbar li{background: white;
        margin: 0.5em 0;
        padding: 0.3em;
        border-right: 1em solid black;}ul.navbar a{text-decoration: none;}ul.navbar:not(.hidden) li:hover a{color: black;}ul.navbar:not(:hover) li:hover a{color: black;}ul.navbar li:hover a{color: red;}a:link{color: blue;}a:visited{color: purple;}footer{margin-top: 1em;
        padding-top: 1em;
        border-top: thin dotted;}.clazz\\\\:colon{color: green;}</style>
  <script defer src=\\"bundle.js\\"></script></head>
  <body>
    <ul class=\\"navbar clazz:colon\\">
      <li>
        <a href=\\"index.html\\">Home page</a>
      </li>
      <li>
        <a href=\\"musings.html\\">Musings</a>
      </li>
    </ul>
    <h1>My first styled page</h1>
    <p>Welcome to my styled page!</p>
    <footer>Made 5 April 2004</footer>
  </body>
</html>
"
`;

exports[`Beastcss Webpack Plugin Without html-webpack-plugin should match html snapshot 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <title>Basic Demo</title>
    
    <style id=\\"used\\">h1{color: green;}</style>
  </head>
  <body>
    <h1 class=\\"additional\\">Some HTML Here</h1>
  </body>
</html>
"
`;

exports[`Beastcss Webpack Plugin additional stylesheets should match html snapshot 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <title>Basic Demo</title>
    
    <style id=\\"used\\">h1{color: green;}.additional{background: red;}</style>
  </head>
  <body>
    <h1 class=\\"additional\\">Some HTML Here</h1>
  </body>
</html>
"
`;

exports[`Beastcss Webpack Plugin preloadExternalStylesheets should match html snapshot 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <title>External CSS Demo</title>
  <script defer src=\\"bundle.js\\"></script><style>:root{font-size: 10px;}html{height: 100%;}body{padding-left: 11em;
  font-family: 'Times New Roman', times, serif;
  color: purple;
  background-color: #d8da3d;}*,:after,:before{box-sizing: inherit;}ul.navbar{list-style-type: none;
  padding: 0;
  margin: 0;
  position: absolute;
  top: 2em;
  left: 1em;
  width: 9em;}h1{font-family: helvetica, arial, sans-serif;}ul.navbar li{background: white;
  margin: 0.5em 0;
  padding: 0.3em;
  border-right: 1em solid black;}ul.navbar a{text-decoration: none;}a:link{color: blue;}a:visited{color: purple;}footer{margin-top: 1em;
  padding-top: 1em;
  border-top: thin dotted;}</style><link rel=\\"preload\\" href=\\"main.css\\" as=\\"style\\"><link href=\\"main.css\\" rel=\\"stylesheet\\" media=\\"print\\" onload=\\"this.media='all'; this.onload=null;\\"><noscript><link rel=\\"stylesheet\\" href=\\"main.css\\"></noscript></head>
  <body>
    <ul class=\\"navbar\\">
      <li>
        <a href=\\"index.html\\">Home page</a>
      </li>
      <li>
        <a href=\\"musings.html\\">Musings</a>
      </li>
    </ul>
    <h1>My first styled page</h1>
    <p>Welcome to my styled page!</p>
    <footer>Made 5 April 2004</footer>
  </body>
</html>
"
`;

exports[`Beastcss Webpack Plugin prune source on multiple html should match html snapshot 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <title>External CSS Demo</title>
  <script defer src=\\"bundle.js\\"></script><style>:root{font-size: 10px;}html{height: 100%;}body{padding-left: 11em;
  font-family: 'Times New Roman', times, serif;
  color: purple;
  background-color: #d8da3d;}*,:after,:before{box-sizing: inherit;}ul.navbar{list-style-type: none;
  padding: 0;
  margin: 0;
  position: absolute;
  top: 2em;
  left: 1em;
  width: 9em;}h1{font-family: helvetica, arial, sans-serif;}ul.navbar li{background: white;
  margin: 0.5em 0;
  padding: 0.3em;
  border-right: 1em solid black;}ul.navbar a{text-decoration: none;}a:link{color: blue;}a:visited{color: purple;}footer{margin-top: 1em;
  padding-top: 1em;
  border-top: thin dotted;}:root{font-size: 10px;}html{height: 100%;}body{padding-left: 11em;
  font-family: 'Times New Roman', times, serif;
  color: purple;
  background-color: #d8da3d;}*,:after,:before{box-sizing: inherit;}ul.navbar{list-style-type: none;
  padding: 0;
  margin: 0;
  position: absolute;
  top: 2em;
  left: 1em;
  width: 9em;}h1{font-family: helvetica, arial, sans-serif;}ul.navbar li{background: white;
  margin: 0.5em 0;
  padding: 0.3em;
  border-right: 1em solid black;}ul.navbar a{text-decoration: none;}a:link{color: blue;}a:visited{color: purple;}footer{margin-top: 1em;
  padding-top: 1em;
  border-top: thin dotted;}</style><link href=\\"main.css\\" rel=\\"stylesheet\\" media=\\"print\\" onload=\\"this.media='print'; this.onload=null;\\"><noscript><link rel=\\"stylesheet\\" href=\\"main.css\\" media=\\"print\\"></noscript><noscript><link rel=\\"stylesheet\\" href=\\"main.css\\"></noscript></head>
  <body>
    <ul class=\\"navbar\\">
      <li>
        <a href=\\"index.html\\">Home page</a>
      </li>
      <li>
        <a href=\\"musings.html\\">Musings</a>
      </li>
    </ul>
    <h1>My first styled page</h1>
    <p>Welcome to my styled page!</p>
    <footer>Made 5 April 2004</footer>
  </body>
</html>
"
`;

exports[`Beastcss Webpack Plugin prune source on multiple html should match html2 snapshot: test 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <title>External CSS Demo</title>
  <script defer src=\\"bundle.js\\"></script><style>:root{font-size: 10px;}html{height: 100%;}body{padding-left: 11em;
  font-family: 'Times New Roman', times, serif;
  color: purple;
  background-color: #d8da3d;}*,:after,:before{box-sizing: inherit;}ul.navbar{list-style-type: none;
  padding: 0;
  margin: 0;
  position: absolute;
  top: 2em;
  left: 1em;
  width: 9em;}h1{font-family: helvetica, arial, sans-serif;}ul.navbar li{background: white;
  margin: 0.5em 0;
  padding: 0.3em;
  border-right: 1em solid black;}ul.navbar a{text-decoration: none;}a:link{color: blue;}a:visited{color: purple;}footer{margin-top: 1em;
  padding-top: 1em;
  border-top: thin dotted;}h2{color: red;}.bold{font-weight: bold;}:root{font-size: 10px;}html{height: 100%;}body{padding-left: 11em;
  font-family: 'Times New Roman', times, serif;
  color: purple;
  background-color: #d8da3d;}*,:after,:before{box-sizing: inherit;}ul.navbar{list-style-type: none;
  padding: 0;
  margin: 0;
  position: absolute;
  top: 2em;
  left: 1em;
  width: 9em;}h1{font-family: helvetica, arial, sans-serif;}ul.navbar li{background: white;
  margin: 0.5em 0;
  padding: 0.3em;
  border-right: 1em solid black;}ul.navbar a{text-decoration: none;}a:link{color: blue;}a:visited{color: purple;}footer{margin-top: 1em;
  padding-top: 1em;
  border-top: thin dotted;}h2{color: red;}.bold{font-weight: bold;}</style><link href=\\"main.css\\" rel=\\"stylesheet\\" media=\\"print\\" onload=\\"this.media='print'; this.onload=null;\\"><noscript><link rel=\\"stylesheet\\" href=\\"main.css\\" media=\\"print\\"></noscript><noscript><link rel=\\"stylesheet\\" href=\\"main.css\\"></noscript></head>
  <body>
    <ul class=\\"navbar\\">
      <li>
        <a href=\\"index.html\\">Home page</a>
      </li>
      <li>
        <a href=\\"musings.html\\">Musings</a>
      </li>
    </ul>
    <h1>My first styled page</h1>
    <p>Welcome to my styled page!</p>
    <h2>Heading</h2>
    <p class=\\"bold\\">bold paragraph</p>
    <footer>Made 5 April 2004</footer>
  </body>
</html>
"
`;

exports[`Beastcss Webpack Plugin prune source on multiple html should match stylesheet snapshot 1`] = `
":root {
  font-size: 10px;
}
html {
  height: 100%;
}
body {
  padding-left: 11em;
  font-family: 'Times New Roman', times, serif;
  color: purple;
  background-color: #d8da3d;
}
*,
:after,
:before {
  box-sizing: inherit;
}
ul.navbar {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: absolute;
  top: 2em;
  left: 1em;
  width: 9em;
}
h1 {
  font-family: helvetica, arial, sans-serif;
}
ul.navbar li {
  background: white;
  margin: 0.5em 0;
  padding: 0.3em;
  border-right: 1em solid black;
}
ul.navbar a {
  text-decoration: none;
}
a:link {
  color: blue;
}
a:visited {
  color: purple;
}
footer {
  margin-top: 1em;
  padding-top: 1em;
  border-top: thin dotted;
}
h2 {
  color: red;
}
.bold {
  font-weight: bold;
}
.extra-style {
  font-size: 200%;
}

"
`;

exports[`Beastcss Webpack Plugin prune source on multiple html without html-webpack-plugin should match html snapshot 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <title>External CSS Demo</title>
    <style>:root{font-size: 10px;}html{height: 100%;}body{padding-left: 11em;
  font-family: 'Times New Roman', times, serif;
  color: purple;
  background-color: #d8da3d;}*,:after,:before{box-sizing: inherit;}ul.navbar{list-style-type: none;
  padding: 0;
  margin: 0;
  position: absolute;
  top: 2em;
  left: 1em;
  width: 9em;}h1{font-family: helvetica, arial, sans-serif;}ul.navbar li{background: white;
  margin: 0.5em 0;
  padding: 0.3em;
  border-right: 1em solid black;}ul.navbar a{text-decoration: none;}a:link{color: blue;}a:visited{color: purple;}footer{margin-top: 1em;
  padding-top: 1em;
  border-top: thin dotted;}</style><link rel=\\"stylesheet\\" href=\\"./style.css\\" media=\\"print\\" onload=\\"this.media='all'; this.onload=null;\\"><noscript><link rel=\\"stylesheet\\" href=\\"./style.css\\"></noscript>
  </head>
  <body>
    <ul class=\\"navbar\\">
      <li>
        <a href=\\"index.html\\">Home page</a>
      </li>
      <li>
        <a href=\\"musings.html\\">Musings</a>
      </li>
    </ul>
    <h1>My first styled page</h1>
    <p>Welcome to my styled page!</p>
    <footer>Made 5 April 2004</footer>
  </body>
</html>
"
`;

exports[`Beastcss Webpack Plugin prune source on multiple html without html-webpack-plugin should match html2 snapshot: test 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <title>External CSS Demo</title>
    <style>:root{font-size: 10px;}html{height: 100%;}body{padding-left: 11em;
  font-family: 'Times New Roman', times, serif;
  color: purple;
  background-color: #d8da3d;}*,:after,:before{box-sizing: inherit;}ul.navbar{list-style-type: none;
  padding: 0;
  margin: 0;
  position: absolute;
  top: 2em;
  left: 1em;
  width: 9em;}h1{font-family: helvetica, arial, sans-serif;}ul.navbar li{background: white;
  margin: 0.5em 0;
  padding: 0.3em;
  border-right: 1em solid black;}ul.navbar a{text-decoration: none;}a:link{color: blue;}a:visited{color: purple;}footer{margin-top: 1em;
  padding-top: 1em;
  border-top: thin dotted;}h2{color: red;}.bold{font-weight: bold;}</style><link rel=\\"stylesheet\\" href=\\"./style.css\\" media=\\"print\\" onload=\\"this.media='all'; this.onload=null;\\"><noscript><link rel=\\"stylesheet\\" href=\\"./style.css\\"></noscript>
  </head>
  <body>
    <ul class=\\"navbar\\">
      <li>
        <a href=\\"index.html\\">Home page</a>
      </li>
      <li>
        <a href=\\"musings.html\\">Musings</a>
      </li>
    </ul>
    <h1>My first styled page</h1>
    <p>Welcome to my styled page!</p>
    <h2>Heading</h2>
    <p class=\\"bold\\">bold paragraph</p>
    <footer>Made 5 April 2004</footer>
  </body>
</html>
"
`;

exports[`Beastcss Webpack Plugin prune source on multiple html without html-webpack-plugin should match stylesheet snapshot 1`] = `".extra-style{font-size: 200%;}"`;

exports[`Beastcss Webpack Plugin publicPath should match html snapshot 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <title>External CSS Demo</title>
  <script defer src=\\"/_public/bundle.js\\"></script><style>:root{font-size: 10px;}html{height: 100%;}body{padding-left: 11em;
  font-family: 'Times New Roman', times, serif;
  color: purple;
  background-color: #d8da3d;}*,:after,:before{box-sizing: inherit;}ul.navbar{list-style-type: none;
  padding: 0;
  margin: 0;
  position: absolute;
  top: 2em;
  left: 1em;
  width: 9em;}h1{font-family: helvetica, arial, sans-serif;}ul.navbar li{background: white;
  margin: 0.5em 0;
  padding: 0.3em;
  border-right: 1em solid black;}ul.navbar a{text-decoration: none;}a:link{color: blue;}a:visited{color: purple;}footer{margin-top: 1em;
  padding-top: 1em;
  border-top: thin dotted;}</style><link href=\\"/_public/main.css\\" rel=\\"stylesheet\\" media=\\"print\\" onload=\\"this.media='all'; this.onload=null;\\"><noscript><link rel=\\"stylesheet\\" href=\\"/_public/main.css\\"></noscript></head>
  <body>
    <ul class=\\"navbar\\">
      <li>
        <a href=\\"index.html\\">Home page</a>
      </li>
      <li>
        <a href=\\"musings.html\\">Musings</a>
      </li>
    </ul>
    <h1>My first styled page</h1>
    <p>Welcome to my styled page!</p>
    <footer>Made 5 April 2004</footer>
  </body>
</html>
"
`;

exports[`Beastcss Webpack Plugin publicPath should prune external sheet 1`] = `
":root {
  font-size: 10px;
}
html {
  height: 100%;
}
body {
  padding-left: 11em;
  font-family: 'Times New Roman', times, serif;
  color: purple;
  background-color: #d8da3d;
}
*,
:after,
:before {
  box-sizing: inherit;
}
ul.navbar {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: absolute;
  top: 2em;
  left: 1em;
  width: 9em;
}
h1 {
  font-family: helvetica, arial, sans-serif;
}
ul.navbar li {
  background: white;
  margin: 0.5em 0;
  padding: 0.3em;
  border-right: 1em solid black;
}
ul.navbar a {
  text-decoration: none;
}
a:link {
  color: blue;
}
a:visited {
  color: purple;
}
footer {
  margin-top: 1em;
  padding-top: 1em;
  border-top: thin dotted;
}
.extra-style {
  font-size: 200%;
}

"
`;

exports[`Beastcss Webpack Plugin webpack compilation should match html snapshot 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <title>Basic Demo</title>
    <style>body{padding-left: 11em;
        font-family: 'Times New Roman', times, serif;
        color: purple;
        background-color: #d8da3d;}ul.navbar{list-style-type: none;
        padding: 0;
        margin: 0;
        position: absolute;
        top: 2em;
        left: 1em;
        width: 9em;}h1{font-family: helvetica, arial, sans-serif;}ul.navbar li{background: white;
        margin: 0.5em 0;
        padding: 0.3em;
        border-right: 1em solid black;}ul.navbar a{text-decoration: none;}ul.navbar:not(.hidden) li:hover a{color: black;}ul.navbar:not(:hover) li:hover a{color: black;}ul.navbar li:hover a{color: red;}a:link{color: blue;}a:visited{color: purple;}footer{margin-top: 1em;
        padding-top: 1em;
        border-top: thin dotted;}.clazz\\\\:colon{color: green;}</style>
  <script defer src=\\"bundle.js\\"></script></head>
  <body>
    <ul class=\\"navbar clazz:colon\\">
      <li>
        <a href=\\"index.html\\">Home page</a>
      </li>
      <li>
        <a href=\\"musings.html\\">Musings</a>
      </li>
    </ul>
    <h1>My first styled page</h1>
    <p>Welcome to my styled page!</p>
    <footer>Made 5 April 2004</footer>
  </body>
</html>
"
`;
